--- a/plugins/tiny/Cargo.toml
+++ b/plugins/tiny/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tiny"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [lib]
 crate-type = ["cdylib"]
@@ -9,11 +9,10 @@ crate-type = ["cdylib"]
 [dependencies]
 qemu-plugin = { workspace = true, default-features = false }
 anyhow = "1.0.99"
-ffi = "0.1.1"
-ctor = "0.5.0"
 
 [features]
 default = ["plugin-api-v5"]
+plugin-api-v0 = ["qemu-plugin/plugin-api-v0"]
 plugin-api-v1 = ["qemu-plugin/plugin-api-v1"]
 plugin-api-v2 = ["qemu-plugin/plugin-api-v2"]
 plugin-api-v3 = ["qemu-plugin/plugin-api-v3"]
