--- a/plugins/tracer/Cargo.toml
+++ b/plugins/tracer/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tracer"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [lib]
 name = "tracer"
@@ -9,7 +9,6 @@ crate-type = ["cdylib", "lib"]
 
 [dependencies]
 anyhow = "1.0.99"
-ctor = "0.5.0"
 qemu-plugin = { workspace = true, default-features = false }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_cbor = "0.11.2"
@@ -26,6 +25,7 @@ serde_json = "1.0.143"
 
 [features]
 default = ["plugin-api-v5"]
+plugin-api-v0 = ["qemu-plugin/plugin-api-v5"]
 plugin-api-v1 = ["qemu-plugin/plugin-api-v1"]
 plugin-api-v2 = ["qemu-plugin/plugin-api-v2"]
 plugin-api-v3 = ["qemu-plugin/plugin-api-v3"]
