--- a/plugins/tracer/Cargo.toml
+++ b/plugins/tracer/Cargo.toml
@@ -22,6 +22,8 @@ clap = { version = "4.5.46", features = ["derive", "string"] }
 memfd-exec = { version = "0.2.1", optional = true }
 rand = "0.9.2"
 serde_json = "1.0.143"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.20"
 
 [features]
 default = ["plugin-api-v5"]
