--- a/qemu-plugin-sys/Cargo.toml
+++ b/qemu-plugin-sys/Cargo.toml
@@ -10,6 +10,7 @@ publish.workspace = true
 readme.workspace = true
 repository.workspace = true
 version.workspace = true
+rust-version.workspace = true
 
 [build-dependencies]
 anyhow = "1.0.99"
