--- a/qemu-plugin/Cargo.toml
+++ b/qemu-plugin/Cargo.toml
@@ -10,11 +10,12 @@ publish.workspace = true
 readme.workspace = true
 repository.workspace = true
 version.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 anyhow = "1.0.99"
 once_cell = "1.21.3"
-qemu-plugin-sys = { version = "10.1.0-v0", workspace = true, default-features = false }
+qemu-plugin-sys = { workspace = true, default-features = false }
 thiserror = "2.0.16"
 num-traits = { version = "0.2.19", optional = true }
 ctor = "0.5.0"
@@ -45,3 +46,6 @@ plugin-api-v4 = ["qemu-plugin-sys/plugin-api-v4"]
 # Use the V5 plugin API, which is defined starting in version 10.1.0
 plugin-api-v5 = ["qemu-plugin-sys/plugin-api-v5"]
 num-traits = ["dep:num-traits"]
+
+[lints.rust]
+incomplete-features = "allow"
