--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,10 @@ jobs:
 
       - uses: actions/checkout@v4
 
+      - name: Install Cargo-Hack
+        run: |
+          cargo install cargo-hack
+
       - name: Check Code
         run: |
           ./scripts/check.sh
@@ -34,6 +38,10 @@ jobs:
 
       - uses: actions/checkout@v4
 
+      - name: Install Cargo-Hack
+        run: |
+          cargo install cargo-hack
+
       - name: Check Code
         run: |
           ./scripts/check.sh
@@ -47,6 +55,10 @@ jobs:
           components: clippy rustfmt
 
       - uses: actions/checkout@v4
+
+      - name: Install Cargo-Hack
+        run: |
+          cargo install cargo-hack
 
       - name: Check Code
         shell: pwsh
@@ -192,7 +204,8 @@ jobs:
         run: |
           brew update
           brew install pkg-config glib pixman gettext meson ninja
-          python3 -m pip install distlib
+          brew install python
+          pip3 install distlib
 
       - name: Cache QEMU
         id: qemu-cache-macos
@@ -247,8 +260,11 @@ jobs:
     steps:
       - name: Set QEMU Version
         run: |
-          QEMU_VERSION=$(curl -L https://packages.msys2.org/packages/mingw-w64-ucrt-x86_64-qemu | grep 'Version:' -A1 | grep -oP '([0-9]+.){2}[0-9]+')
-          echo "QEMU_VERSION=${QEMU_VERSION}" >> $GITHUB_ENV
+          $Response = Invoke-WebRequest -Uri "https://packages.msys2.org/packages/mingw-w64-ucrt-x86_64-qemu" -UseBasicParsing
+          $Content = $Response.Content
+          $VersionMatch = $Content | Select-String -Pattern "Version:" -Context 0,1
+          $QEMU_VERSION = $VersionMatch.Context.PostContext | Select-String -Pattern "([0-9]+\.){2}[0-9]+" | ForEach-Object { $_.Matches.Value }
+          echo "QEMU_VERSION=$QEMU_VERSION" >> $GITHUB_ENV
 
       # Cache MSYS2 
       - name: Cache MSYS2 packages
