--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -258,8 +258,11 @@ jobs:
     steps:
       - name: Set QEMU Version
         run: |
-          $QEMU_VERSION = (Invoke-WebRequest "https://packages.msys2.org/packages/mingw-w64-ucrt-x86_64-qemu" -UseBasicParsing).Content -split "`n" | Where-Object { $_ -match "Version:" } | Select-Object -Next 1 | ForEach-Object { if ($_ -match "([0-9]+\.){2}[0-9]+") { $matches[0] } }
-          echo "QEMU_VERSION=$QEMU_VERSION" >> $GITHUB_ENV
+          $url = "https://packages.msys2.org/base/mingw-w64-qemu"
+          $content = (Invoke-WebRequest -Uri $url -UseBasicParsing).Content
+          $version = [regex]::Match($content, 'Version:\s*-\s*([0-9]+\.[0-9]+\.[0-9]+-[0-9]+)').Groups[1].Value
+          Write-Output $version
+          echo "QEMU_VERSION=$version" >> $GITHUB_ENV
 
       # Cache MSYS2 
       - name: Cache MSYS2 packages
