Patch QEMU instead of trying to use missing venv

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -222,6 +222,9 @@ jobs:
           git clone https://gitlab.com/qemu/qemu qemu-upstream
           cd qemu-upstream
           git checkout "${QEMU_COMMIT_HASH}"
+          curl -o pip-compat.patch -L https://gitlab.com/-/project/11167699/uploads/0bc3ef428137940e7cdc31beae0d7594/qemu-10.0.3-pip-25.2-compat.patch
+          git apply pip-compat.patch
+          cd ..
 
       - name: Build QEMU from source (softmmu)
         if: steps.qemu-cache-macos.outputs.cache-hit != 'true'
