--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -229,6 +229,7 @@ jobs:
 
       - name: Test QEMU Install
         run: |
+          qemu-upstream/build/qemu-x86_64 --version
           qemu-x86_64 --version
 
       - name: Run Tracer
