Debug qemu-upstream paths

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -229,6 +229,9 @@ jobs:
 
       - name: Test QEMU Install
         run: |
+          ls qemu-upstream
+          ls qemu-upstream/build
+          ls qemu-upstream/build/qemu-x86_64
           qemu-upstream/build/qemu-x86_64 --version
           qemu-x86_64 --version
 
