Fix install syntax and qemu path on MacOS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -144,7 +144,7 @@ jobs:
           cd qemu-upstream
           ./configure --enable-plugins
           make -C build -j$(nproc)
-          make -C install
+          make -C build install
           cd ..
 
       - uses: dtolnay/rust-toolchain@nightly
@@ -232,7 +232,7 @@ jobs:
 
       - name: Test QEMU Install
         run: |
-          qemu-system-x86_64-unsigned --version
+          /opt/homebrew/bin/qemu-system-x86_64-unsigned --version
 
       - name: Cache Fedora Cloud Image
         id: fedora-cache
@@ -251,7 +251,7 @@ jobs:
         run: |
           cd plugins/tiny-system
           cargo build -r
-          timeout --preserve-status 180 qemu-system-x86_64-unsigned -machine type=q35 -m 2G -nographic -device virtio-net-pci,netdev=net0 -netdev user,id=net0,hostfwd=tcp::2222-:22 -drive if=virtio,format=qcow2,file=Fedora-Cloud-Base-Generic-42-1.1.x86_64.qcow2 -drive if=virtio,format=raw,file=.github/rsrc/seed.img -plugin target/release/tiny_system.dll" 2> err.txt > out.txt
+          timeout --preserve-status 180 /opt/homebrew/bin/qemu-system-x86_64-unsigned -machine type=q35 -m 2G -nographic -device virtio-net-pci,netdev=net0 -netdev user,id=net0,hostfwd=tcp::2222-:22 -drive if=virtio,format=qcow2,file=Fedora-Cloud-Base-Generic-42-1.1.x86_64.qcow2 -drive if=virtio,format=raw,file=.github/rsrc/seed.img -plugin target/release/tiny_system.dll" 2> err.txt > out.txt
           cat out.txt
           cat err.txt
           cd ../..
