--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,30 +92,30 @@ jobs:
         run: |
           cat <<EOF > /etc/apt/sources.list.d/ubuntu.sources
           Types: deb
-          URIs: http://archive.ubuntu.com/ubuntu/
+          URIs: mirror://mirrors.ubuntu.com/mirrors.txt
           Suites: noble noble-updates noble-backports
           Components: main universe restricted multiverse
           Signed-By: /usr/share/keyrings/ubuntu-archive-keyring.gpg
 
           Types: deb
-          URIs: http://security.ubuntu.com/ubuntu/
+          URIs: mirror://mirrors.ubuntu.com/mirrors.txt
           Suites: noble-security
           Components: main universe restricted multiverse
           Signed-By: /usr/share/keyrings/ubuntu-archive-keyring.gpg
 
           Types: deb-src
-          URIs: http://archive.ubuntu.com/ubuntu/
+          URIs: mirror://mirrors.ubuntu.com/mirrors.txt
           Suites: noble noble-updates noble-backports
           Components: main universe restricted multiverse
           Signed-By: /usr/share/keyrings/ubuntu-archive-keyring.gpg
 
-          Types: deb
-          URIs: http://security.ubuntu.com/ubuntu/
+          Types: deb-src
+          URIs: mirror://mirrors.ubuntu.com/mirrors.txt
           Suites: noble-security
           Components: main universe restricted multiverse
           Signed-By: /usr/share/keyrings/ubuntu-archive-keyring.gpg
           EOF
-
+      
       - name: Install QEMU Build Dependencies
         run: |
           apt -y update
@@ -237,7 +237,7 @@ jobs:
       - name: Build And Test Tiny System
         run: |
           cargo build -r --manifest-path=plugins/tiny-system/Cargo.toml
-          timeout --preserve-status 180 qemu-upstream/build/qemu-system-x86_64 -machine type=q35 -m 2G -nographic -device virtio-net-pci,netdev=net0 -netdev user,id=net0,hostfwd=tcp::2222-:22 -drive if=virtio,format=qcow2,file=Fedora-Cloud-Base-Generic-42-1.1.x86_64.qcow2 -drive if=virtio,format=raw,file=.github/rsrc/seed.img -plugin target/release/libtiny_system.so 2> err.txt > out.txt || exit 0
+          timeout --preserve-status 180 qemu-upstream/build/qemu-system-x86_64-unsigned -machine type=q35 -m 2G -nographic -device virtio-net-pci,netdev=net0 -netdev user,id=net0,hostfwd=tcp::2222-:22 -drive if=virtio,format=qcow2,file=Fedora-Cloud-Base-Generic-42-1.1.x86_64.qcow2 -drive if=virtio,format=raw,file=.github/rsrc/seed.img -plugin target/release/libtiny_system.so 2> err.txt > out.txt || exit 0
           cat out.txt
           cat err.txt
 
