--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -193,8 +193,7 @@ jobs:
       - name: Install QEMU Build Dependencies
         run: |
           brew update
-          brew install pkg-config glib pixman gettext meson ninja
-          brew install python
+          brew install pkg-config glib pixman gettext meson ninja python coreutils
 
       - name: Cache QEMU
         id: qemu-cache-macos
@@ -232,13 +231,12 @@ jobs:
       - name: Download Cloud Image
         if: steps.fedora-cache.outputs.cache-hit != 'true'
         run: |
-          curl -o Fedora-Cloud-Base-Generic-42-1.1.x86_64.qcow2 ${{ env.FEDORA_CLOUDIMG_URL }}
+          curl -L -o Fedora-Cloud-Base-Generic-42-1.1.x86_64.qcow2 ${{ env.FEDORA_CLOUDIMG_URL }}
 
       - name: Build And Test Tiny System
         run: |
           cargo build -r --manifest-path=plugins/tiny-system/Cargo.toml
-          ls target/release
-          timeout --preserve-status 180 qemu-upstream/build/qemu-system-x86_64-unsigned -machine type=q35 -m 2G -nographic -device virtio-net-pci,netdev=net0 -netdev user,id=net0,hostfwd=tcp::2222-:22 -drive if=virtio,format=qcow2,file=Fedora-Cloud-Base-Generic-42-1.1.x86_64.qcow2 -drive if=virtio,format=raw,file=.github/rsrc/seed.img -plugin target/release/libtiny_system.dylib 2> err.txt > out.txt || exit 0
+          timeout --preserve-status 180 qemu-upstream/build/qemu-system-x86_64-unsigned -machine type=q35 -m 2G -nographic -drive if=virtio,format=qcow2,file=Fedora-Cloud-Base-Generic-42-1.1.x86_64.qcow2 -drive if=virtio,format=raw,file=.github/rsrc/seed.img -plugin target/release/libtiny_system.dylib 2> err.txt > out.txt || exit 0
           cat out.txt
           cat err.txt
 
